# BuildSystems-Repo

./: .gitignore  README.md
CMake/Include_Files/: CMakeLists.txt  build_target.bat  run_cmake.bat
CMake/Multiple_CMake_Modules/: CMakeLists.txt  build_target.bat  execute_target.bat  main.c  run_cmake.bat
CMake/Multiple_CMake_Modules/include/: test.h
CMake/Multiple_CMake_Modules/src/: test.c
CMake/Multiple_CMake_Modules/submodule/: CMakeLists.txt
CMake/Multiple_CMake_Modules_Eclipse/: .gitignore  .project  CMakeLists.txt  build_target.bat  execute_target.bat  main.c  run_cmake.bat
CMake/Multiple_CMake_Modules_Eclipse/submodule/: hello.c  hello.h
CMake/Multiple_Files/: CMakeLists.txt  build_target.bat
CMake/Simple/: CMakeLists.txt  run_cmake.bat
Manual/Multiple_Files/: compile_multiple_files.sh  main.c
Manual/Simple/: compile_simple.sh  compile_simple_modular.sh  main.c
Meson/: README.md
Meson/Custom_Target/: main.cpp  meson.build
Meson/Meson_Options/: .gitignore  README.md  meson.build  meson_options.txt
Meson/Multiple_Files/: .gitignore  main.c  meson.build
Meson/Multiple_Files/foo/: foo.c
Meson/Multiple_Subdirectories/: .gitignore  main.c  meson.build
Meson/Multiple_Subdirectories/bar/: bar.c  bar.h  meson.build
Meson/Multiple_Subdirectories/foo/: foo.c  foo.h  meson.build
Meson/Simple/: .gitignore  main.c
doc/: compile_manually.md  understand_compile_process.md
